--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
   <title>BookWorm - O melhor lugar para os leitores</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
     
 <body>
@@ -13,6 +13,9 @@
         <input class="loginUsername" id="loginUsername" type="text"></input>
         <span class="passwordText">Senha:</span>
         <input class="loginPassword" id="loginPassword" type="password"></input>
+        <div class="buttonLogin" id="buttonLogin">
+          <span class="buttonText">Entrar</span>
+        </div>
     </div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/login.js"></script>
