--- a/html/app.html
+++ b/html/app.html
@@ -13,10 +13,17 @@
 
     </div>
     <div class="login" id="login">
+      <img class="loginIllustrate" src="/images/pages/login/illustrateHome.png">
       <div class="loginModal" id="loginModal">
         <span class="loginModalTitle">Bem vindo(a) ao</span>
         <span class="loginModalTitleBold">BookWarm</span>
         <span class="loginModalDescription">Descubra, empreste, apaixone-se: o mundo dos livros na palma da sua mão</span>
+        <div class="signupButton">
+          <span class="signupTitle">Inscreva-se</span>
+        </div>
+        <div class="signinButton">
+          <span class="signinTitle">Entrar</span>
+        </div>
       </div>
     </div>
     </div>
