--- a/html/app.html
+++ b/html/app.html
@@ -13,16 +13,29 @@
 
     </div>
     <div class="login" id="login">
-      <img class="loginIllustrate" src="/images/pages/login/illustrateHome.png">
+      <img class="loginIllustrate" id="loginIllustrate" src="/images/pages/login/illustrateHome.png">
       <div class="loginModal" id="loginModal">
+        <div id="initial">
         <span class="loginModalTitle">Bem vindo(a) ao</span>
         <span class="loginModalTitleBold">BookWarm</span>
         <span class="loginModalDescription">Descubra, empreste, apaixone-se: o mundo dos livros na palma da sua mão</span>
         <div class="signupButton">
-          <span class="signupTitle">Inscreva-se</span>
+          <span class="signupButtonTitle" id="signupButton">Inscreva-se</span>
         </div>
-        <div class="signinButton">
+        <div class="signinButton" id="signinButton">
           <span class="signinTitle">Entrar</span>
+        </div>
+        </div>
+        <div class="signup" id="signup">
+          <img class="signupIllustrate" src="/images/pages/login/logo.png">
+          <span class="signupTitle">Vamos criar seu login.</span>
+          <spac class="signupDescription"></span>
+          <div class="username">
+            <span class="usernameTitle">Nome de Usuário</span>
+            <div class="usernameModal">
+              <input class="usernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+            </div>
+          </div>
         </div>
       </div>
     </div>
