--- a/html/app.html
+++ b/html/app.html
@@ -16,14 +16,16 @@
       <img class="loginIllustrate" id="loginIllustrate" src="/images/pages/login/illustrateHome.png">
       <div class="loginModal" id="loginModal">
         <div id="initial">
+        <div class="loginSwipeBar"></div>
         <span class="loginModalTitle">Bem vindo(a) ao</span>
         <span class="loginModalTitleBold">BookWarm</span>
         <span class="loginModalDescription">Descubra, empreste, apaixone-se: o mundo dos livros na palma da sua mão</span>
-        <div class="signupButton">
-          <span class="signupButtonTitle" id="signupButton">Inscreva-se</span>
+        <span class="signTitle">Selecione uma opção:</span>
+        <div class="signupButton" id="signupButton">
+          <span class="signupButtonTitle" id="signupButtonTitle">Inscreva-se</span>
         </div>
         <div class="signinButton" id="signinButton">
-          <span class="signinTitle">Entrar</span>
+          <span class="signinButtonTitle" id="signinButtonTitle">Entrar</span>
         </div>
         </div>
         <div class="signup" id="signup">
