--- a/html/app.html
+++ b/html/app.html
@@ -30,12 +30,35 @@
         </div>
         <div class="signup" id="signup">
           <img class="signupIllustrate" src="/images/pages/login/logo.png">
-          <span class="signupTitle">Vamos criar seu login.</span>
-          <spac class="signupDescription"></span>
+          <span class="signupTitle">Vamos criar sua conta.</span>
+          <spac class="signupDescription">Crie sua conta com os dados necessários durante o seu registro abaixo</span>
           <div class="username">
             <span class="usernameTitle">Nome de Usuário</span>
             <div class="usernameModal">
               <input class="usernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+            </div>
+          </div>
+          <div class="password">
+            <span class="passwordTitle">Senha</span>
+            <div class="passwordModal">
+              <input class="passwordInput" type="text" placeholder="Insira sua Senha">
+            </div>
+          </div>
+        </div>
+        <div class="signin" id="signin">
+          <img class="signinIllustrate" src="/images/pages/login/logo.png">
+          <span class="signinTitle">Vamos acessar sua conta.</span>
+          <spac class="signinDescription">Acesse sua conta com os dados que você inseriu durante o seu registro</span>
+          <div class="username">
+            <span class="usernameTitle">Nome de Usuário</span>
+            <div class="usernameModal">
+              <input class="usernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+            </div>
+          </div>
+          <div class="password">
+            <span class="passwordTitle">Senha</span>
+            <div class="passwordModal">
+              <input class="passwordInput" type="text" placeholder="Insira sua Senha">
             </div>
           </div>
         </div>
