--- a/html/app.html
+++ b/html/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BookWorm - O melhor lugar para os leitores</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/login.css">
 </head>
@@ -31,36 +31,36 @@
         <div class="signup" id="signup">
           <img class="signupIllustrate" src="/images/pages/login/logo.png">
           <span class="signupTitle">Vamos criar sua conta.</span>
-          <spac class="signupDescription">Crie sua conta com os dados necessários durante o seu registro abaixo</span>
-          <div class="username">
-            <span class="usernameTitle">Nome de Usuário</span>
-            <div class="usernameModal">
-              <input class="usernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
-            </div>
+          <span class="signupDescription">Crie sua conta com os dados necessários durante o seu registro abaixo</span>
+          <span class="signupUsernameTitle">Nome de Usuário</span>
+          <input class="signupUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+          <div class="signupUsernameBorder"></div>
+          <span class="signupPasswordTitle">Senha</span>
+          <input class="signupPasswordInput" type="password" placeholder="Insira sua Senha">
+          <div class="signupPasswordBorder"></div>
+          <span class="signupPasswordRecovery">Esqueceu a Senha?</span>
+          <div class="signupButtonInput">
+            <span class="signupButtonInputTitle">Criar Conta</span>
           </div>
-          <div class="password">
-            <span class="passwordTitle">Senha</span>
-            <div class="passwordModal">
-              <input class="passwordInput" type="text" placeholder="Insira sua Senha">
-            </div>
-          </div>
+          <span class="signupBackTitle">Você já tem uma conta?</span>
+          <span class="signupBackTitleAlert">Entrar</span>
         </div>
         <div class="signin" id="signin">
           <img class="signinIllustrate" src="/images/pages/login/logo.png">
           <span class="signinTitle">Vamos acessar sua conta.</span>
-          <spac class="signinDescription">Acesse sua conta com os dados que você inseriu durante o seu registro</span>
-          <div class="username">
-            <span class="usernameTitle">Nome de Usuário</span>
-            <div class="usernameModal">
-              <input class="usernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
-            </div>
+          <span class="signinDescription">Acesse sua conta com os dados utilizados durante o seu registro de conta</span>
+          <span class="signinUsernameTitle">Nome de Usuário</span>
+          <input class="signinUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+          <div class="signinUsernameBorder"></div>
+          <span class="signinPasswordTitle">Senha</span>
+          <input class="signinPasswordInput" type="password" placeholder="Insira sua Senha">
+          <div class="signinPasswordBorder"></div>
+          <span class="signinPasswordRecovery">Esqueceu a Senha?</span>
+          <div class="signinButtonInput">
+            <span class="signinButtonInputTitle">Acessar Conta</span>
           </div>
-          <div class="password">
-            <span class="passwordTitle">Senha</span>
-            <div class="passwordModal">
-              <input class="passwordInput" type="text" placeholder="Insira sua Senha">
-            </div>
-          </div>
+          <span class="signinBackTitle">Você não tem uma conta?</span>
+          <span class="signinBackTitleAlert">Criar Conta</span>
         </div>
       </div>
     </div>
