--- a/html/app.html
+++ b/html/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BookWorm - O melhor lugar para os leitores</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/login.css">
 </head>
