--- a/html/app.html
+++ b/html/app.html
@@ -8,64 +8,12 @@
 </head>
     
 <body>
-    <div class="resolution" id="resolution"></div>
-    <div class="home" id="home">
+  <div id="app">
 
-    </div>
-    <div class="login" id="login">
-      <img class="loginIllustrate" id="loginIllustrate" src="/images/pages/login/illustrateHome.png">
-      <div class="loginModal" id="loginModal">
-        <div id="initial">
-        <div class="loginSwipeBar"></div>
-        <span class="loginModalTitle">Bem vindo(a) ao</span>
-        <span class="loginModalTitleBold">BookWarm</span>
-        <span class="loginModalDescription">Descubra, empreste, apaixone-se: o mundo dos livros na palma da sua mão</span>
-        <span class="signTitle">Selecione uma opção:</span>
-        <div class="signupButton" id="signupButton">
-          <span class="signupButtonTitle" id="signupButtonTitle">Inscreva-se</span>
-        </div>
-        <div class="signinButton" id="signinButton">
-          <span class="signinButtonTitle" id="signinButtonTitle">Entrar</span>
-        </div>
-        </div>
-        <div class="signup" id="signup">
-          <img class="signupIllustrate" src="/images/pages/login/logo.png">
-          <span class="signupTitle">Vamos criar sua conta.</span>
-          <span class="signupDescription">Crie sua conta com os dados necessários durante o seu registro abaixo</span>
-          <span class="signupUsernameTitle">Nome de Usuário</span>
-          <input class="signupUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
-          <div class="signupUsernameBorder"></div>
-          <span class="signupPasswordTitle">Senha</span>
-          <input class="signupPasswordInput" type="password" placeholder="Insira sua Senha">
-          <div class="signupPasswordBorder"></div>
-          <div class="signupButtonInput">
-            <span class="signupButtonInputTitle">Criar Conta</span>
-          </div>
-          <span class="signupBackTitle">Você já tem uma conta?</span>
-          <span class="signupBackTitleAlert">Entrar</span>
-        </div>
-        <div class="signin" id="signin">
-          <img class="signinIllustrate" src="/images/pages/login/logo.png">
-          <span class="signinTitle">Vamos acessar sua conta.</span>
-          <span class="signinDescription">Acesse sua conta com os dados utilizados durante o seu registro de conta</span>
-          <span class="signinUsernameTitle">Nome de Usuário</span>
-          <input class="signinUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
-          <div class="signinUsernameBorder"></div>
-          <span class="signinPasswordTitle">Senha</span>
-          <input class="signinPasswordInput" type="password" placeholder="Insira sua Senha">
-          <div class="signinPasswordBorder"></div>
-          <span class="signinPasswordRecovery">Esqueceu a Senha?</span>
-          <div class="signinButtonInput">
-            <span class="signinButtonInputTitle">Acessar Conta</span>
-          </div>
-          <span class="signinBackTitle">Você não tem uma conta?</span>
-          <span class="signinBackTitleAlert">Criar Conta</span>
-        </div>
-      </div>
-    </div>
-    </div>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/login.js"></script>
-  <script src="/js/app.js"></script>
+  </div>
 </body>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/home.js"></script>
+<script src="/js/login.js"></script>
+<script src="/js/app.js"></script>
 </html>
