--- a/html/login.html
+++ b/html/login.html
@@ -22,7 +22,7 @@
             <input class="signupUsernameInput" id="signupUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
             <div class="signupUsernameBorder" id="signupUsernameBorder"></div>
             <span class="signupPasswordTitle">Senha</span>
-            <input class="signupPasswordInput" type="password" placeholder="Insira sua Senha">
+            <input class="signupPasswordInput" id="signupPasswordInput" type="password" placeholder="Insira sua Senha">
             <div class="signupPasswordBorder" id="signupPasswordBorder"></div>
             <span class="signupError" id="signupError"></span>
             <div class="signupButtonInput" id="signupButtonInput">
