--- a/html/login.html
+++ b/html/login.html
@@ -36,13 +36,14 @@
             <span class="signinTitle">Vamos acessar sua conta.</span>
             <span class="signinDescription">Acesse sua conta com os dados utilizados durante o seu registro de conta</span>
             <span class="signinUsernameTitle">Nome de Usuário</span>
-            <input class="signinUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
-            <div class="signinUsernameBorder"></div>
+            <input class="signinUsernameInput" id="signinUsernameInput" type="text" placeholder="Ex. MarquinhoGrau203">
+            <div class="signinUsernameBorder" id="signinUsernameBorder"></div>
             <span class="signinPasswordTitle">Senha</span>
-            <input class="signinPasswordInput" type="password" placeholder="Insira sua Senha">
-            <div class="signinPasswordBorder"></div>
+            <input class="signinPasswordInput" id="signinPasswordInput" type="password" placeholder="Insira sua Senha">
+            <div class="signinPasswordBorder" id="signinPasswordBorder"></div>
             <span class="signinPasswordRecovery">Esqueceu a Senha?</span>
-            <div class="signinButtonInput">
+            <span class="signinError" id="signinError"></span>
+            <div class="signinButtonInput" id="signinButtonInput">
                 <span class="signinButtonInputTitle">Acessar Conta</span>
             </div>
             <span class="signinBackTitle">Você não tem uma conta?</span>
